syntax = "proto3";

option go_package = "./user";

package user;

message UserExistsRequest {
  string userId = 1;
}

message UserExistsResponse {
  bool exists = 1;
}

service UserService {
  rpc CheckUserExists (UserExistsRequest) returns (UserExistsResponse);
}
